Bug 117461 - Log improvement - "ACPI: %u ACPI AML tables successfully acquired and loaded" should be KERN_INFO
Summary: Log improvement - "ACPI: %u ACPI AML tables successfully acquired and loaded"...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lv Zheng
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-01 02:22 UTC by Andy Lutomirski
Modified: 2017-02-15 01:08 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
add KERN_INFO for acpi_info (790 bytes, text/plain)
2016-05-07 11:56 UTC, Chen Yu
Details
[PATCH] ACPICA: Utilities: Introduce facility to allow Linux to set correct logging levels (2.24 KB, patch)
2016-05-11 03:04 UTC, Lv Zheng
Details | Diff

Description Andy Lutomirski 2016-05-01 02:22:00 UTC
It's currently KERN_WARNING.  KERN_WARNING should be used for warnings, not success messages.

I looked at the code, found that it's ACPI_INFO, and then got lost in all the indirection when trying to figure out where KERN_WARNING comes from.
Comment 1 Chen Yu 2016-05-07 08:01:57 UTC
This is because either ACPI_INFO or ACPI_WARNING actually invoke
printk(KERN_CONT) at last, and the default message level of printk is KERN_WARNING. 
It looks like we might need to change the implementation of ACPI_INFO,ACPI_WARNING,etc to comply with the loglevel context.
Comment 2 Chen Yu 2016-05-07 11:56:34 UTC
Created attachment 215431 [details]
add KERN_INFO for acpi_info

This patch is to add KERN_INFO prefix for acpi_info
Comment 3 Lv Zheng 2016-05-11 03:04:04 UTC
Created attachment 215901 [details]
[PATCH] ACPICA: Utilities: Introduce facility to allow Linux to set correct logging levels

OK.

Please try the attached improvement.

Thanks
-Lv
Comment 4 Lv Zheng 2016-05-20 03:09:15 UTC
Patch upstreamed to the ACPICA repo.
Closing...
Comment 5 Doug Smythies 2017-02-15 01:08:43 UTC
Please see bug 193531, where there seems to be some side effects from the patch.

Note You need to log in before you can comment on or make changes to this bug.